--- a/index.html
+++ b/index.html
@@ -189,19 +189,19 @@
 
     <div class="fa-container">
         <div class="fa-box">
-            <a href="https://www.facebook.com/UnivofMaryland" class="fa fa-facebook" target="_blank"></a>
+            <a href="https://www.facebook.com/UnivofMaryland" class="fa fa-facebook"></a>
         </div>
         <div class="fa-box">
-            <a href="https://twitter.com/UofMaryland" class="fa fa-twitter" target="_blank"></a>
+            <a href="https://twitter.com/UofMaryland" class="fa fa-twitter"></a>
         </div>
         <div class="fa-box">
-            <a href="https://www.linkedin.com/school/university-of-maryland/mycompany/verification/" class="fa fa-linkedin" target="_blank"></a>
+            <a href="https://www.linkedin.com/school/university-of-maryland/mycompany/verification/" class="fa fa-linkedin"></a>
         </div>
         <div class="fa-box">
-            <a href="https://www.instagram.com/univofmaryland/" class="fa fa-instagram" target="_blank"></a>
+            <a href="https://www.instagram.com/univofmaryland/" class="fa fa-instagram"></a>
         </div>
         <div class="fa-box">
-            <a href="https://www.youtube.com/@UofMaryland" class="fa fa-youtube-play" target="_blank"></a>
+            <a href="https://www.youtube.com/@UofMaryland" class="fa fa-youtube-play"></a>
         </div>
     </div>
 
