--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
     
     <img src="public/testudo-gif-2.gif" alt="Centered GIF">
 
-    <div id="titleBox">askTestudo&#8482</div>
-    <div id="animated-face"></div>
+    <div id="titleBox" style="font-family: 'Roboto', sans-serif; background-color: #222; color: #fff; text-align: center; margin: 0; padding: 0; font-size: 2em; font-weight: 700; margin-top: 50px;">askTestudo&#8482</div>
+    <div id="animated-face" style=""></div>
+    
 
     <div id="iframeContainer" draggable="true" ondragstart="drag(event)">
         <iframe src="https://web.powerva.microsoft.com/environments/Default-c85487db-d5f3-45e1-9158-876d58525ccf/bots/crb0b_askTestudoDygo-b/webchat?__version__=2" frameborder="100" style="width: 100%; height: 100%;"></iframe>
